# bosko-scraper

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
api/: auth.py  base_client.py  base_endpoint.py  client.py  utils.py
api/endpoints/: __init__.py  auth.py  products.py  shops.py
api/models/: auth.py  product.py  shop.py
bot/: .env.example  bosko_bot.py  constants.py  formatting.py  services.py  utils.py
bot/handlers/: commands.py  daily_updates.py  favorites.py
