[project]
name = "bosko-scraper"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-telegram-bot[job-queue]==22.2",
    "requests>=2.32.4",
    "unidecode>=1.4.0",
]
